--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,13 @@ readme = "README.md"
 package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.11,<4.0"
 celery = {extras = ["redis"], version = "^5.4.0"}
-openrelik-worker-common = "^0.12.0"
+openrelik-worker-common = "^0.16.1"
 pandas = "^2.2.3"
 pyparsing = "^3.2.0"
 debugpy = "^1.8.7"
+openrelik-common = "^0.7.0"
 
 [tool.poetry.group.test.dependencies]  
 pytest = "^7.4"  
